@@ -47,9 +47,15 @@
 
 /* Define ALIASNAME as a weak alias for NAME.
    If weak aliases are not available, this defines a strong alias.  */
-#define weak_alias(name, aliasname) _weak_alias (name, aliasname)
-#define _weak_alias(name, aliasname) \
+#ifndef __ASSEMBLER__
+# define weak_alias(name, aliasname) _weak_alias (name, aliasname)
+# define _weak_alias(name, aliasname) \
   extern __typeof (name) aliasname __attribute__ ((weak, alias (#name)));
+#else
+# define weak_alias(original, alias) \
+  .weak alias; \
+  alias = original
+#endif
 
 /* Same as WEAK_ALIAS, but mark symbol as hidden.  */
 #define weak_hidden_alias(name, aliasname) \
