@@ -1,5 +1,7 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* include/libdfp-symbols.h: Add weak_alias for assembler code.
+
 	* Makefile.in [C_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and
 	-D_SVID_SOURCE and add -D_ISOC99_SOURCE.
 	[CXX_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and add
